--- a/marketing.html
+++ b/marketing.html
@@ -641,8 +641,8 @@
   </div>
 </section>
 
-<!-- ════════════════════════════ STATS ════════════════════════════ -->
-<div class="stats-bar" role="region" aria-label="Key statistics">
+<!-- ════════════════════════════ STATS ════════════════════════════ 
+  <div class="stats-bar" role="region" aria-label="Key statistics">
   <div class="container">
     <div class="stats-inner">
       <div class="stat-item">
@@ -978,18 +978,19 @@
         </div>
         <p>AI-powered digital marketing for small businesses. 16+ years of proven results, now enhanced with machine learning to help you grow faster and smarter.</p>
         <div class="footer-social">
-          <a class="social-btn" href="#" aria-label="Facebook">
+         <!-- <a class="social-btn" href="#" aria-label="Facebook">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>
           </a>
           <a class="social-btn" href="#" aria-label="Instagram">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>
-          </a>
-          <a class="social-btn" href="#" aria-label="LinkedIn">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
-          </a>
+          </a> 
           <a class="social-btn" href="#" aria-label="Twitter/X">
             <svg width="15" height="15" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+          </a>-->
+          <a class="social-btn" href="https://www.linkedin.com/company/fractional-revenue-officer/" aria-label="LinkedIn">
+            <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
           </a>
+          
         </div>
       </div>
       <div class="footer-col">
