Update statistics in marketing.html

--- a/marketing.html
+++ b/marketing.html
@@ -641,25 +641,25 @@
   </div>
 </section>
 
-<!-- ════════════════════════════ STATS ════════════════════════════ 
-  <div class="stats-bar" role="region" aria-label="Key statistics">
+<!-- ════════════════════════════ STATS ════════════════════════════ -->
+  <div class="stats-bar" role="region" aria-label="Recent CLient Results">
   <div class="container">
     <div class="stats-inner">
       <div class="stat-item">
-        <div class="stat-number">16+</div>
-        <div class="stat-label">Years of Experience</div>
+        <div class="stat-number">3X</div>
+        <div class="stat-label">App User Growth</div>
       </div>
       <div class="stat-item">
-        <div class="stat-number">500+</div>
-        <div class="stat-label">Small Businesses Grown</div>
+        <div class="stat-number">61%</div>
+        <div class="stat-label">CaC Reduction</div>
       </div>
       <div class="stat-item">
-        <div class="stat-number">4.9★</div>
-        <div class="stat-label">Average Client Rating</div>
+        <div class="stat-number">150%</div>
+        <div class="stat-label">Conversion Rate Growth</div>
       </div>
       <div class="stat-item">
-        <div class="stat-number">312%</div>
-        <div class="stat-label">Avg. Lead Growth in Year 1</div>
+        <div class="stat-number">100%</div>
+        <div class="stat-label">Customer Satisfaction</div>
       </div>
     </div>
   </div>
